# cp-mcp-hub

./: .dockerignore  .gitignore  Dockerfile  NOTICE  README.md  docker-compose.example.yml  server_definitions.json
.github/workflows/: build-and-push.yml  ci.yml  refresh-manifest.yml
backend/: alembic.ini  pyproject.toml
backend/app/: main.py  seed.py  settings.py
backend/app/api/: auth.py  logs.py  manifest.py  servers.py  system.py  token.py
backend/app/core/: encryption.py  reverse_proxy.py  security.py
backend/app/db/: models.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 20260513_0001_initial.py
backend/app/manifest/: loader.py  schema.py
backend/app/orchestrator/: manager.py  process.py  proxy_config.py  ring_buffer.py
backend/tests/: conftest.py  test_auth_flow.py  test_encryption.py  test_manifest.py  test_orchestrator.py  test_orchestrator_no_cascade.py  test_orchestrator_status.py  test_servers_api.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: BrandHero.tsx  ConfigForm.tsx  ConnectSnippet.tsx  CopyButton.tsx  LogViewer.tsx  ServerCard.tsx  StatusBadge.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  (+3 more)
frontend/src/lib/: clipboard.ts  pillars.ts
frontend/src/pages/: ChangePassword.tsx  Dashboard.tsx  Login.tsx  ServerDetail.tsx  Settings.tsx
scripts/: build_manifest.py  entrypoint.sh  gen_tls.py  healthcheck.sh
