[project]
name = "cp-mcp-hub"
version = "0.1.0"
description = "Self-hosted control plane for Check Point MCP servers"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "aiosqlite>=0.20",
    "greenlet>=3",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "cryptography>=43",
    "bcrypt>=4.2",
    "httpx>=0.27",
    "anyio>=4",
    "itsdangerous>=2.2",
    "mcp-proxy==0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "ASYNC"]
# B008: Depends() in defaults is the idiomatic FastAPI pattern.
# ASYNC109/ASYNC240: timeout-args + Path use are deliberate in orchestrator/seed.
ignore = ["E501", "B008", "ASYNC109", "ASYNC240"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
